Done with the image upload in the add items
